[tool.poetry]
name = "echo-bot"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "echo_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
line-bot-sdk = "^3.14.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
